Fix footer overlap

--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ ul a {
     position: relative;
     padding: 0 2px;
     text-shadow: 2px 2px 5px #000;
+ 
     -webkit-transition: all 400ms ease;
     -moz-transition: all 400ms ease;
     -ms-transition: all 400ms ease;
@@ -146,9 +147,10 @@ ul a {
     transform-style: preserve-3d;
 }
 .roll-link a:after {
-    content: "[" attr(title) "]";
+     content: "[" attr(title) "]";
     display: block;
     position: absolute;
+     
     left: 0;
     top: 0;
     padding: 0 2px;
@@ -161,6 +163,7 @@ ul a {
     -ms-transform: translate3d( 0px, 0px, -20px) rotateX( 90deg);
     transform: translate3d( 0px, 0px, -20px) rotateX( 90deg);
 }
+ 
 .roll-link:hover a {
     color: #dde7df;
     -webkit-transform: translate3d( 0px, 105%, 0px) rotateX( -90deg);
@@ -206,26 +209,29 @@ article{
 }
 .wrapper {
     margin-top: 5%;
+    overflow: hidden;
 }
 /* Footer */
 
-footer {
+footer .footer-bg{
     position: absolute;
-    bottom: 0;
-    z-index: 3;
-    width: 100%;
+    height: 300px;
+    width: 115%;
     background: url('../img/footer-bg.png') no-repeat;
-    background-size: contain;
-    background-position: bottom left;
-    max-height: 180px;
-    height: 100%;
+    background-position: center;
+    background-size: cover;
+    z-index: 3;
+    left: -50px;
+    bottom: -200px;
 }
  
 footer .footer-wrapper {
+
     position: absolute;
     bottom: 4%;
     left: 2%;
     margin-left: -5px;
+    z-index: 3;
 }
 footer p {
     font-size: 1.2em;
@@ -307,6 +313,9 @@ footer ul a i.fa {
     float: left;
     margin-right: 20px;
     max-width: 150px;
+ /*   border: 2px solid #fff;
+    background: url('../img/gray-bg.png') repeat;*/
+    
 }
 /* Portfolio  */
 
@@ -328,7 +337,7 @@ footer ul a i.fa {
     transition: all 1s ease;
     float: right;
 }
-.getModal:hover , .resume-btn:hover{
+.getModal:hover , .resume-btn:hover, .email-btn:hover {
     background: #111;
 }
 /* Contact */
@@ -371,6 +380,7 @@ form textarea {
     letter-spacing: 1px;
     font-size: 1.4em;
     min-width: 50%;
+    overflow: hidden;
 }
 form input[type="text"]:focus,
 form textarea:focus {
@@ -397,7 +407,7 @@ textarea {
 .email-msg {
     display: none;
 }
-#email-btn {
+.email-btn {
     clear: both;
     display: block;
     float: right;
@@ -415,9 +425,7 @@ textarea {
     -webkit-transition: all 1s ease;
     transition: all 1s ease;
 }
-#email-btn:hover {
-    background: #111;
-}
+ 
 
 /* Modal */
 
@@ -646,6 +654,10 @@ textarea {
         box-shadow: 0px -5px 10px #000;
         overflow: hidden;
     }
+    footer .footer-bg{
+        display: none;
+    }
+    
     footer .footer-wrapper {
         position: absolute;
         bottom: 0px;
